# mongo-rust-driver-prototype

./: .close_shards  .gitignore  .gitmodules  .start_shards  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASES.md  clippy.toml
docs/: bson.html  bson_decode.html  bson_encode.html  bson_formattable.html  bson_json_parse.html  client.md  coll.md  cursor.md  db.md  encode.md  formattable.md  index.html  json_parse.md  libmongo.html  libmongo_client.html  libmongo_coll.html  libmongo_cursor.html  libmongo_db.html  libmongo_util.html  util.md
docs/bson/: bson.md  decode.html  decode.md  encode.html  encode.md  formattable.html  formattable.md  index.html  json_parse.html
docs/gridfs/: gridfile.md  gridfs.md
docs/mongo/: client.html  client.md  coll.html  coll.md  conn_node.md  conn_replica.md  cursor.html  cursor.md  db.html  db.md  index.html  index.md  mongo.md  rs.md  shard.md  util.html  util.md
examples/: bson-demo.rs  bson_demo.rs  demo.rs  mongo_demo.rs  people.rs  rs_demo.rs  tutorial.rs
script/: before_install  install_mongo_release  install_mongo_releases  script  start_mongo_release  test  test_mongo_release  test_mongo_releases
src/: auth.rs  bson.rs  bson_types.rs  cast.c  command_type.rs  common.rs  connstring.rs  cursor.rs  db.rs  error.rs  gridfs.rs  json_parse.rs  lib.rs  macros.rs  main.rs  mod.rs  mongo.rc  oid.rs  ord_hash.rs  pool.rs  stream.rs  topology.rs
src/apm/: client.rs  event.rs  listener.rs  mod.rs
src/bson/: bson.rc  bson.rs  bson_types.rs  cast.c  decode.rs  encode.rs  formattable.rs  json_parse.rs  ord_hash.rs  stream.rs
src/client/: coll.rs  command.rs  common.rs  connstring.rs  cursor.rs  db.rs  error.rs  mod.rs  oid.rs  pool.rs
src/client/coll/: batch.rs  error.rs  mod.rs  options.rs  results.rs
src/client/wire_protocol/: flags.rs  header.rs  mod.rs  operations.rs
src/coll/: batch.rs  error.rs  mod.rs  options.rs  results.rs
src/db/: mod.rs  options.rs  roles.rs
src/gridfs/: file.rs  mod.rs
src/libbson/: bson.rs  decode.rs  encode.rs  formattable.rs  json_parse.rs
src/libgridfs/: grid.rs  gridfile.rs  gridfs.rc  gridfs.rs
src/libgridfs/test/: grid_files.rs  test.rs
src/libmongo/: client.rs  coll.rs  conn.rs  conn_node.rs  conn_replica.rs  cursor.rs  db.rs  demo.rs  index.rs  mock.rs  mockable.rs  mongo.rc  mongo.rs  mongos.rs  msg.rs  people.rs  rs.rs  shard.rs  test.rs  tutorial.rs  util.rs
src/libmongo/test/: add_user.rs  authenticate.rs  bad_insert_cont.rs  bad_insert_no_cont.rs  capped_coll.rs  drop_collection.rs  drop_db.rs  fill_coll.rs  get_collections.rs  indices.rs  (+23 more)
src/tools/: md5.rs  mockable.rs  ord_hash.rs  stream.rs  tools.rs
src/topology/: mod.rs  monitor.rs  server.rs
src/wire_protocol/: flags.rs  header.rs  mod.rs  operations.rs
tests/: lib.rs
tests/apm/: mod.rs
tests/auth/: mod.rs
tests/client/: batch_size.rs  bulk.rs  client.rs  coll.rs  connstring.rs  cursor.rs  db.rs  error.rs  gridfs.rs  handshake.rs  mod.rs  oid.rs  wire_protocol.rs
tests/json/: arguments.rs  decodable.rs  eq.rs  macros.rs  mod.rs  options.rs  outcome.rs  reader.rs
tests/macros/: mod.rs
tests/sdam/: framework.rs  mod.rs  rs.rs  single.rs
tests/server_selection/: framework.rs  replicasetwithprimary.rs  single.rs  unknown.rs
tests/ssl/: ca.pem  client.crt  client.key  mod.rs  server.pem
tests/v3_2/: mod.rs
tools/: close_testdb.py  start_testdb.py
(+58 files in other folders)
