[package]
authors = ["Kevin Yeh <kevinyeah@utexas.edu>", "Saghm Rossi <saghmrossi@gmail.com>", "Valeri Karpov <valkar207@gmail.com>"]
description = "A native MongoDB driver developed under MongoDB labs."
documentation = "https://docs.rs/mongodb"
keywords = ["mongo", "mongodb", "database", "bson", "nosql"]
license = "Apache-2.0"
name = "mongodb"
readme = "README.md"
repository = "https://github.com/mongodb-labs/mongo-rust-driver-prototype"
version = "0.3.7"

[dependencies]
bitflags = "1.0.0"
bson = "0.10.0"
bufstream = "0.1.3"
byteorder = "1.0.0"
chrono = "0.4.0"
data-encoding = "1.2.0"
rand = "0.3.15"
rust-crypto = "0.2.36"
scan_fmt = "0.1.1"
semver = "0.8.0"
separator = "0.3.1"
time = "0.1.37"

[dependencies.clippy]
optional = true
version = "~0"

[dependencies.openssl]
optional = true
version = "0.9.19"

[dependencies.textnonce]
default-features = false
version = "0.6.3"

[dev-dependencies]
approx = "0.1.1"

[dev-dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.3"

[features]
default = []
ssl = ["openssl"]
lint = ["clippy"]
