[package]
authors = ["Kevin Yeh <kevinyeah@utexas.edu>", "Saghm Rossi <saghmrossi@gmail.com>", "Valeri Karpov <valkar207@gmail.com>"]
description = "A native MongoDB driver developed under MongoDB labs."
documentation = "https://docs.rs/mongodb"
keywords = ["mongo", "mongodb", "database", "bson", "nosql"]
license = "Apache-2.0"
name = "mongodb"
readme = "README.md"
repository = "https://github.com/mongodb-labs/mongo-rust-driver-prototype"
version = "0.4.0"

[dependencies]
bitflags = "1.0.0"
bson = "0.14.0"
bufstream = "0.1.3"
byteorder = "1.0.0"
chrono = "0.4.0"
data-encoding = "2.0.0"
rand = "0.7.0"
scan_fmt = "0.1.0"
semver = "0.9.0"
serde = "1"
serde_derive = "1"
separator = "0.4.1"
time = "0.1.37"
md-5 = "0.8.0"
sha-1 = "0.8.1"
hmac = "0.7.1"
pbkdf2 = "0.3.0"
hex = "0.3.2"

[dependencies.clippy]
optional = true
version = "~0"

[dependencies.openssl]
optional = true
version = "0.10.15"

[dependencies.serde_json]
version = "1"
features = ["preserve_order"]

[dependencies.textnonce]
default-features = false
version = "0.6.3"

[dev-dependencies]
approx = "0.3.2"

[features]
default = []
ssl = ["openssl"]
lint = ["clippy"]
